<resources>
    <string name="app_name">优记</string>
    <string name="current_missions">当前任务</string>
    <string name="mission_detail">任务详情</string>
    <string name="groups_info">任务分组执行情况</string>
    <string name="add">新增</string>
    <string name="sharp_x1_default">#</string>
    <string name="sharp_x3_default">###</string>
    <string name="sharp_x3x3_default">###-###</string>
    <string name="sharp_x5_default">#####</string>
    <string name="sharp_x15_default">xxxxxxxxxxxxxxx</string>
    <string name="sharp_x2_default">##</string>
    <string name="sharp_x24_default">########################</string>
    <string name="mission_id">01</string>
    <string name="mission_name_default">默认任务1</string>
    <string name="mission_description">任务描述文字</string>
    <string name="mission_description_extra">任务描述文字（文本足够长，内容足够多；文本足够长，内容足够多。）</string>
    <string name="add_group">新建分组</string>
    <string name="presaved_button">预留按键</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_36">36</string>
    <string name="num_54">54</string>
    <string name="num_72">72</string>
    <string name="num_90">90</string>
    <string name="group_size">分组大小</string>
    <string name="Order">顺序</string>
    <string name="random">随机</string>
    <string name="manner_of_item_picking">分组方式</string>
    <string name="manner_of_item_picking2">内容选取方式</string>
    <string name="explanations">在随机模式中被抽取掉的项目，不会出现在顺序模式生成的列表里。</string>
    <string name="default_group_decs">分组描述，默认值。</string>
    <string name="desc_desc">分组描述：</string>
    <string name="default_group_decs2">（可使用默认值）</string>
    <string name="cancel">取消</string>
    <string name="add_new_group">创建新任务分组</string>
    <string name="default_group_decs3">默认可自动生成</string>
    <string name="detail01">详情</string>
    <string name="reserved">预留</string>
    <string name="items_belongs_to_group">所属项目列表</string>
    <string name="group_detail">分组详情</string>
    <string name="log_view">查看日志</string>
    <string name="logs">日志</string>
    <string name="order2">序号#</string>
    <string name="includingItemsInfo">组内项目总览</string>
    <string name="includingItemsInfo2">项目列表</string>
    <string name="number1">数量：</string>
    <string name="go1">学习</string>
    <string name="go2_repick">复习</string>
    <string name="log_detail">学习（复习）日志详情</string>
    <string name="show_groups">显示分组</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="time_past">时间消耗：</string>
    <string name="time_past_words2">请在60分钟内完成</string>
    <string name="unit_min">分</string>
    <string name="onItsWay">做好准备！马上开始！</string>
    <string name="confirm">确定</string>
    <string name="ready_to_learn">确认开始学习…</string>
    <string name="hold_on_a_moment">正在加载分组信息，请稍等……</string>
    <string name="bar_x2_default">--</string>
    <string name="colon_1">:</string>
    <string name="zero_2">00</string>
    <string name="slash1">/</string>
    <string name="num_one">1</string>
    <string name="time_up1">真遗憾，时间用光了！</string>
    <string name="should_prolong_question_mark">可以续15分钟（只有一次机会），意下如何？</string>
    <string name="go_prolong">那就续吧！</string>
    <string name="give_up">不了，谢谢</string>
    <string name="time_past_words2_1">请在</string>
    <string name="num_60">60</string>
    <string name="time_past_words2_2">分钟内完成。</string>
    <string name="start">开始</string>
    <string name="groups_refresh">刷新</string>
    <string name="filter_groups">过滤分组</string>
    <string name="remove_reds">移除红色组</string>
    <string name="confirm_removeReds">确认删除超时分组?</string>
    <string name="remove">删除</string>
    <string name="minutes_75">75</string>
    <string name="no_record_if_cancel">取消则不记录本次学习</string>
    <string name="hello_world">Hello World!</string>
    <string name="ads_position">（广告位）</string>
    <string name="ads_position_reserved">（广告位预留）</string>
    <string name="num_12">12</string>
    <string name="num_108">108</string>
    <string name="input_by_hand">手动输入</string>
    <string name="input_by_hand2">(手动输入)</string>
    <string name="tip_and_over">点击翻面</string>
    <string name="fill_and_slide_over">填写正确后滑动至下一页</string>
    <string name="confirm_deleting_group">确认删除此分组?</string>
    <string name="preparing_data_please_wait">正在准备数据，请稍候……</string>
    <string name="first_time_running">首次运行 </string>
    <string name="YouMemoryCN">优记</string>
    <string name="YouMemoryEn">YouMemory</string>
    <string name="re_try">重试</string>
    <string name="items_of_mission">任务所属Items</string>
    <string name="zero_and_numbers">0代表建组时间/1为初次学习记录/复习从2起递增</string>
    <string name="confirm_finish">确认并返回</string>
    <string name="star_symbol">☆</string>
    <string name="one_hour_extra">1小时内多次复习</string>
    <string name="zero">0</string>
    <string name="alpha_zero_three">（工程测试α-0.3.1）</string>
</resources>
