<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp">
    <TextView
        android:id="@+id/group_id"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/sharp_x2_default"
        />
    <TextView
        android:id="@+id/group_description"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/sharp_x24_default"
        />
    <TextView
        android:id="@+id/item_amount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/sharp_x2_default"
        />

</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/current_state"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="48dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/sharp_x15_default"
        />
    <Button
        android:id="@+id/group_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/sharp_x3_default"
        />

</LinearLayout>









</LinearLayout>