<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="150dp"
    tools:context=".ConfirmReadyLearningDiaFragment"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/ready_to_learn" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/ready_learningDfg_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/cancel"
            />
        <TextView
            android:id="@+id/ready_learningDfg_confirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/confirm"
            />

    </LinearLayout>

</LinearLayout>