<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemLearningActivity"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/flt_mask_learningPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tv_onItsWay_learningPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/onItsWay"
            android:textSize="24sp"
            />

    </FrameLayout>

    <!-- 头部，标题+已过时间（正计时） -->
    <LinearLayout
        android:id="@+id/header_learningActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="4dp"
        android:layout_margin="6dp"
        >

        <TextView
            android:id="@+id/tv_learning_page_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sharp_x3x3_default"
            />

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <!-- 正计时组件群 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:gravity="bottom|center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/time_past_words2"/>


            <TextView
                android:id="@+id/tv_time_past_numMinute_Learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/zero_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/colon_1"/>

            <TextView
                android:id="@+id/tv_time_past_numSecond_Learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/zero_2"
                />



        </LinearLayout>

    </LinearLayout>

    <!-- Fragment在此 -->
    <android.support.v4.view.ViewPager
        android:layout_below="@id/header_learningActivity"
        android:layout_above="@id/footer_learningActivity"
        android:id="@+id/viewPager_ItemLearning"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>


    <LinearLayout
        android:id="@+id/footer_learningActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        >
        <TextView
            android:id="@+id/currentPageNum_learningActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/num_one"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash1"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/totalPageNum_learningActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    </LinearLayout>
</RelativeLayout>