<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vkyoungcn.learningtools.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/ads_position_reserved"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/current_missions"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff666666"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_missions_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
