<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ConfirmReadyLearningDiaFragment"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="241dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/confirm_removeReds" />
    <!--横向分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:background="#eeeeee"
        />
    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/removeRedsDfg_onfirm"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="1dp"
            android:text="@string/remove"
            android:background="#aad84315"
            />

        <TextView
            android:id="@+id/removeRedsDfg_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textSize="18sp"
            android:background="#eeeeee"
            android:text="@string/cancel"
            />

    </LinearLayout>

</LinearLayout>