<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsOfMissionActivity"
    android:orientation="vertical">

    <!--上部Mission简略详情-->
    <!--题头-->
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:gravity="center"
    android:text="@string/mission_detail"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/missionName_itemsOfMission"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sharp_x2_default"
            />
        <TextView
            android:id="@+id/missionDes_itemsOfMission"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sharp_x2_default"
            />

    </LinearLayout>

    <!--下部内容容器，便于放置遮罩层；以及设置两侧缩进-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">
    <FrameLayout
        android:id="@+id/flt_mask_itemsOfMission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/preparing_data_please_wait"/>

    </FrameLayout>

        <!--Rv题头-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/items_of_mission"
            />

        <!--横向分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efefefef"
            />

        <!--Rv部分-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_itemsOfMission"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>



</LinearLayout>